--- a/library.properties
+++ b/library.properties
@@ -2,9 +2,9 @@ name=Arduino_BHY2
 version=1.0.2
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Library for BHY2 chip on Nicla Sense ME
-paragraph=Provides the APIs for Nicla Sense ME board to make a DFU or configure/read BHY sensors. All these operations can be done either via Eslov or BLE.
+sentence=Library to use the Nicla Sense ME with edge-ml
+paragraph=Connects to edge-ml over Web Bluetooth.
 category=Sensors
 url=https://github.com/arduino-libraries/Arduino_BHY2
 architectures=mbed,mbed_nicla
-includes=Arduino_BHY2.h
+includes=edge-ml.h
