Changed to edge-ml branding

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Arduino_BHY2
-version=1.0.2
+version=0.0.1
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Library to use the Nicla Sense ME with edge-ml
-paragraph=Connects to edge-ml over Web Bluetooth.
-category=Sensors
+sentence=Library for BHY2 chip on Nicla Sense ME
+paragraph=
+category=
 url=https://github.com/arduino-libraries/Arduino_BHY2
 architectures=mbed,mbed_nicla
-includes=edge-ml.h
+includes=Arduino_BHY2.h
